<?xml version="1.0"?>
<package format="2">
  <name>l3xz_sweep_scanner</name>
  <version>1.0.0</version>
  <description>ROS driver for Scanse Sweep 360° 2D LIDAR.</description>

  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>

  <license>Copyright LXRobotics GmbH</license>

  <url type="website">https://107-systems.org/</url>
  <url type="repository">https://github.com/107-systems/l3xz_sweep_scanner</url>

  <author email="consulting@lxrobotics.com">Alexander Entinger</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
